Внес исправления в задачу List